[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pandas_utils"
version= "0.0.1"
description = "Utility functions for data wrangling with pandas"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
]
dynamic = ["readme"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}